; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ieee802154/extr_atusb.c_atusb_set_channel.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ieee802154/extr_atusb.c_atusb_set_channel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ieee802154_hw = type { %struct.atusb* }
%struct.atusb = type { i32 }

@SR_CHANNEL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ieee802154_hw*, i32, i32)* @atusb_set_channel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @atusb_set_channel(%struct.ieee802154_hw* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.ieee802154_hw*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.atusb*, align 8
  %9 = alloca i32, align 4
  store %struct.ieee802154_hw* %0, %struct.ieee802154_hw** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %10 = load %struct.ieee802154_hw*, %struct.ieee802154_hw** %5, align 8
  %11 = getelementptr inbounds %struct.ieee802154_hw, %struct.ieee802154_hw* %10, i32 0, i32 0
  %12 = load %struct.atusb*, %struct.atusb** %11, align 8
  store %struct.atusb* %12, %struct.atusb** %8, align 8
  %13 = load %struct.atusb*, %struct.atusb** %8, align 8
  %14 = load i32, i32* @SR_CHANNEL, align 4
  %15 = load i32, i32* %7, align 4
  %16 = call i32 @atusb_write_subreg(%struct.atusb* %13, i32 %14, i32 %15)
  store i32 %16, i32* %9, align 4
  %17 = load i32, i32* %9, align 4
  %18 = icmp slt i32 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %3
  %20 = load i32, i32* %9, align 4
  store i32 %20, i32* %4, align 4
  br label %22

21:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %22

22:                                               ; preds = %21, %19
  %23 = load i32, i32* %4, align 4
  ret i32 %23
}

declare dso_local i32 @atusb_write_subreg(%struct.atusb*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
